crates/hwp-core/tests/snapshots/snapshot_tests__noori_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 0.00mm x 0.00mm



![이미지](/Users/yoonhb/Documents/workspace/hwpjs/crates/hwp-core/tests/snapshots/images/noori/BIN0001.jpg)


| 보도일시<br> | 2018. 9. 4.(화) 조간(온라인 9. 3. 12:00)부터 보도해 주시기 바랍니다.  <br> |   |   |
|---|---|---|---|
| 배포일시<br> | 2018. 9. 3.(월) 09:00<br> | 담당부서<br> | 거대공공연구정책과<br> |
| 담당과장<br> | 장인숙(02-2110-2430)<br> | 담 당 자<br> |  용찬재 사무관(02-2110-2428)<br> |



| 우리가 독자 개발하여 최초 발사하는 한국형발사체,<br> 국민이 정한 그 이름은 ｢누리｣<br> “세상”의 옛말로, 우주까지 확장된 새로운 세상을 연다는 의미 -<br> 명칭공모전에 1만건 이상 응모, 뜨거운 관심 보여 -<br> |
|---|


□ 과학기술정보통신부(장관 유영민, 이하 ‘과기정통부’)는 우리나라 최초로 순수 우리기술로 개발 중인 **한국형발사체****(KSLV-2)****의 새로운 이름**으로 **“누리”가 선정**되었다고 밝혔다.

o 한국형발사체는 1.5톤급 실용위성을 지구 저궤도(600km~800km)까지 쏘아 올릴 수 있는 3단형 우주발사체로, 연간 130여개 기관이 참여하여 2021년 발사를 목표로 개발하고 있다.

o 올해 10월에는 한국형발사체의 핵심부품인 75톤 액체엔진의 비행성능을 확인하기 위해 시험발사체를 발사할 예정이다.

□ 과기정통부는 한국항공우주연구원(원장 임철호, 이하 ‘항우연’)과 함께 그간 별도의 명칭 없이 ‘한국형발사체’라 불려온 우리 발사체의 새로운 이름을 선정하기 위해 **대국민 명칭 공모전을 실시**하였다.

o 4월 27일부터 5월 31일까지 실시한 동 명칭 공모에는** 약 6,300여명의 ****국민이 참여하여 총 10,000건 이상의 응모작을 제출**하여 뜨거운 관심을 보였다.

o 명칭선정절차는 제출된 응모작에 대해 **네이미스트, 카피라이터, 국어교사 등 외부 전문가가** 주제와의 적합성, 상징성, 참신성, 발음 및 기억의 용의성 등을 기준으로 **후보작을 선별**한 후,

o **발사체 개발에 직접 참여**하고 있는 연구자, 산업체 관계자 약 **400명의 선호도 조사를 통해 최종 선정**하는 절차로 진행되었다.

□ 이러한 절차를 거쳐 한국형발사체의 **새로운 명칭은 ‘누리’로 결정**되었으며, 동 명칭은 앞으로 우리나라 독자 발사체인** ‘한국형발사체’의**** 공식 명칭으로 사용**될 예정이다.

o 동 명칭을 제출한 경상대학교 에너지기계공학과 백승엽 학생은 ‘**누리’는 ‘세상’의 옛말**로 **우주로까지 확장된 새로운 세상을 ****연다는** **의미**로, 우리 손으로 만든 발사체로 온 우주를 누비고 미래 발전을 누리길 희망하는 마음을 담았다고 밝혔다.

o 백승엽학생에게는 오는 9월 7일(금)에 과기정통부 장관상과 함께 소정의 상금이 수여될 예정이다.

□ 과기정통부 거대공공연구정책관은 “명칭 공모전을 통해 우리국민의 **우주에 대한 높은 관심을 확인**할 수 있었다”며 “새로운 이름에 걸맞게 무한한 가능성을 갖고 있는 **우주공간을 우리 발사체로 직접 개척할 수 있도록 최선을 다할 것**” 이라고 밝혔다.


| <br> | 이 자료에 대하여 더욱 자세한 내용을 원하시면<br> 과학기술정보통신부 용찬재 사무관(☎ 02-2110-2428)에게 연락주시기 바랍니다.<br> |
|---|---|


---



| 붙임<br> |   |  한국형발사체(누리호)와 시험발사체 비교<br> |
|---|---|---|



| 구 분<br> | 한국형발사체(누리호)<br> | 시험발사체<br> |
|---|---|---|
| 형 상<br> | <br> | <br> |
| 목 적<br> | 1.5톤급 실용위성을 지구저궤도(600~800km)에 투입<br> | 한국형발사체 75톤급 엔진의 비행성능 검증<br> |
| 총 길이<br> | 47.2 m<br> | 25.8 m<br> |
| 최대 직경<br> | 3.5 m<br> | 2.6 m<br> |
| 이륙 중량<br> | 200 톤<br> | 52.1 톤<br> |
| 탑재체 중량<br> | 1.5 톤<br> | -<br> |
| 단 수 <br> | 3단<br> | 1단<br> |
