crates/hwp-core/tests/snapshots/snapshot_tests__outline_hwpx_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<h1 class="hwp-outline-1"><span class="hwp-outline-number">1.</span> <span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요 1</span></h1>
<h2 class="hwp-outline-2"><span class="hwp-outline-number">가.</span> <span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요2</span></h2>
<h3 class="hwp-outline-3"><span class="hwp-outline-number">1)</span> <span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요3</span></h3>
<h4 class="hwp-outline-4"><span class="hwp-outline-number">가)</span> <span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요4</span></h4>
<h5 class="hwp-outline-5"><span class="hwp-outline-number">(1)</span> <span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요 5</span></h5>
<h5 class="hwp-outline-5"><span class="hwp-outline-number">(2)</span> <span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요 5-2</span></h5>
<h2 class="hwp-outline-2"><span class="hwp-outline-number">나.</span> <span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요2-2</span></h2>
<h6 class="hwp-outline-6"><span class="hwp-outline-number">(가)</span> <span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요 6 </span></h6>
<h6 class="hwp-outline-6"><span class="hwp-outline-number">(나)</span> <span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요 6-2</span></h6>
<p class="hwp-outline-7"><span class="hwp-outline-number">①</span> <span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요7</span></p>
<p class="hwp-outline-7"><span class="hwp-outline-number">②</span> <span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요7-2</span></p>
<p style="margin-left: 160.0pt"><span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요8</span></p>
<p style="margin-left: 180.0pt"><span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요9</span></p>
<p style="margin-left: 200.0pt"><span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요10</span></p>
<h1 class="hwp-outline-1"><span class="hwp-outline-number">2.</span> <span style="font-size: 10.0pt; font-family: '함초롬바탕'">개요 1-2</span></h1>
</div>
