crates/hwp-core/tests/snapshots/snapshot_tests__page_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<!DOCTYPE html>
<html>
<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">

<head>
  <title>제목입니다.</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8">
  <style>
body {margin:0;padding-left:0;padding-right:0;padding-bottom:0;padding-top:2mm;}
.hce {margin:0;padding:0;position:absolute;overflow:hidden;}
.hme {margin:0;padding:0;position:absolute;}
.hhe {margin:0;padding:0;position:relative;}
.hhi {display:inline-block;margin:0;padding:0;position:relative;background-size:contain;}
.hls {margin:0;padding:0;position:absolute;}
.hfS {margin:0;padding:0;position:absolute;}
.hcD {margin:0;padding:0;position:absolute;}
.hcI {margin:0;padding:0;position:absolute;}
.hcS {margin:0;padding:0;position:absolute;}
.hfN {margin:0;padding:0;position:relative;}
.hmB {margin:0;padding:0;position:absolute;}
.hmO {margin:0;padding:0;position:absolute;}
.hmT {margin:0;padding:0;position:absolute;}
.hpN {display:inline-block;margin:0;padding:0;position:relative;white-space:nowrap;}
.htC {display:inline-block;margin:0;padding:0;position:relative;vertical-align:top;overflow:hidden;}
.haN {display:inline-block;margin:0;padding:0;position:relative;}
.hdu {margin:0;padding:0;position:relative;}
.hdS {margin:0;padding:0;position:absolute;}
.hsC {margin:0;padding:0;position:absolute;}
.hsR {margin:0;padding:0;position:absolute;background-size:100% 100%;}
.hsG {margin:0;padding:0;position:absolute;}
.hsL {margin:0;padding:0;position:absolute;}
.hsT {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsE {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsA {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsP {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsV {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsO {margin:0;padding:0;position:absolute;}
.hsU {margin:0;padding:0;position:absolute;overflow:hidden;}
.hpi {margin:0;padding:0;position:absolute;}
.hch {margin:0;padding:0;position:absolute;}
.hcG {margin:0;padding:0;position:absolute;}
.heq {margin:0;padding:0;position:absolute;}
.heG {margin:0;padding:0;position:absolute;}
.htA {margin:0;padding:0;position:absolute;}
.hvi {margin:0;padding:0;position:absolute;}
.htb {margin:0;padding:0;position:absolute;}
.htG {margin:0;padding:0;position:absolute;}
.hfJ {margin:0;padding:0;position:absolute;}
.hfG {margin:0;padding:0;position:absolute;}
.hfB {margin:0;padding:0;position:absolute;}
.hfR {margin:0;padding:0;position:absolute;}
.hfC {margin:0;padding:0;position:absolute;}
.hfO {margin:0;padding:0;position:absolute;}
.hfL {margin:0;padding:0;position:absolute;}
.hfM {margin:0;padding:0;position:absolute;}
.hfE {margin:0;padding:0;position:absolute;}
.hpl {margin:0;padding:0;position:absolute;}
.hs {margin:0;padding:0;position:absolute;overflow:visible;}
.hpa {position:relative;padding:0;overflow:hidden;margin-left:2mm;margin-right:0mm;margin-bottom:2mm;margin-top:0mm;border:1px black solid;box-shadow:1mm 1mm 0 #AAAAAA;}
.hpa::after {content:'';position:absolute;margin:0;padding:0;left:0;right:0;top:0;bottom:0;background-color:white;z-index:-2;}
.hrt {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;vertical-align:middle;line-height:1.1;}
.hco {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;}
.hcc {margin:0;padding:0;position:absolute;}
.hls {clear:both;}
[onclick] {cursor:pointer;}
.cs0 {
  font-size:10pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs1 {
  font-size:10pt;color:rgb(0,0,0);font-family:"바탕";
}
.cs2 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs3 {
  font-size:9pt;color:rgb(0,0,0);font-family:"바탕";letter-spacing:-0.03em;
}
.cs4 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";letter-spacing:-0.03em;
}
.ps0 {
  text-align:justify;
}
.ps1 {
  text-align:justify;
}
.ps2 {
  text-align:justify;
}
.ps3 {
  text-align:justify;
}
.ps4 {
  text-align:justify;
}
.ps5 {
  text-align:justify;
}
.ps6 {
  text-align:justify;
}
.ps7 {
  text-align:justify;
}
.ps8 {
  text-align:justify;
}
.ps9 {
  text-align:justify;
}
.ps10 {
  text-align:justify;
}
.ps11 {
  text-align:justify;
}
@media print {
.hpa {margin:0;border:0 black none;box-shadow:none;}
body {padding:0;}
}
  </style>
</head>


<body>
<div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1">페이지1</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:5.46mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:11.11mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:16.75mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:22.40mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:28.04mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:33.69mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:39.33mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:44.98mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:50.62mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:56.26mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:61.91mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:67.55mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:73.20mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:78.84mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:84.49mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:90.13mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:95.78mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:101.42mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:107.06mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:112.71mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:118.35mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:124.00mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:129.64mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:135.29mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:140.93mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:146.58mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:152.22mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:157.86mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:163.51mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:169.15mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:174.80mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:180.44mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:186.09mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:191.73mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:197.38mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:203.02mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:208.66mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:214.31mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:219.95mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:225.60mm;height:3.53mm;width:150.00mm;"></div></div></div><div class="hpN" style="left:105mm;top:282mm;width:10.58mm;height:4.23mm;"><span class="hrt cs0">- 1 -</span></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1">페이지2</span></div></div></div><div class="hpN" style="left:105mm;top:282mm;width:10.58mm;height:4.23mm;"><span class="hrt cs0">- 2 -</span></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:150.00mm;"></div></div></div><div class="hpN" style="left:105mm;top:282mm;width:10.58mm;height:4.23mm;"><span class="hrt cs0">- 3 -</span></div></div></body>

</html>
